[tool.poetry]
name = "trn-faq"
version = "0.1.0"
description = ""
authors = ["katsumoto-fv <katsumoto@fvs-net.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "3.31.0"
python-dotenv = "1.0.0"
langchain = "0.0.172"
openai = "0.27.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
